# piconeo2-wivrn

./: .Changelog.md.kate-swp  .coderabbit.yaml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Changelog.md  LICENSE  README.md
.github/workflows/: build.yml  release.yml
client/alvr-ref/: README.md
client/pico_native/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  main.cpp  openxr_tracking.cpp  openxr_tracking.h  pico_blit.cpp  pico_blit.h  pico_decoder.cpp  pico_decoder.h  pico_lobby.cpp  pico_lobby.h  pico_tracking.cpp  pico_tracking.h  wivrn_client_pico.cpp
client/pico_native/common/: wivrn_packets.h  wivrn_sockets.cpp
client/pico_native/java/com/unity3d/player/: UnityPlayer.java
client/pico_native/java/org/meumeu/wivrn/: MainActivity.java  WivrnLobbyView.java
client/pico_native/src/audio/: pico_audio.cpp
client/pico_native/src/core/: latency_tracker.h  main.cpp  pico_client.cpp  pico_client.h  pico_jni.cpp  pico_render.cpp  pico_render_thread.cpp  pico_render_thread.h  pico_sdk.h  pico_stutter.h
client/pico_native/src/net/: wivrn_client_pico.cpp  wivrn_client_pico.h
client/pico_native/src/render/: pico_blit.cpp  pico_blit.h  pico_lobby.cpp  pico_lobby.h
client/pico_native/src/tracking/: pico_tracking.cpp  pico_tracking.h
client/pico_native/src/video/: pico_decoder.cpp  pico_decoder.h
client/pico_oxr/: settings.gradle
client/pico_oxr/app/src/main/cpp/: CMakeLists.txt  lobby.cpp  lobby.h  main.cpp  openxr_ext_stubs.h  pvr_stubs.h
client/pico_oxr/app/src/main/cpp/openxr/: openxr.h  openxr_platform.h
client/pico_oxr/app/src/main/cpp/streaming/: eye_tracking.cpp  eye_tracking.h  oxr_blit.cpp  oxr_blit.h  oxr_tracking.cpp  oxr_tracking.h  pico_decoder.cpp  pico_decoder.h  streaming_client.cpp  streaming_client.h
client/pico_pvr/app/src/main/cpp/: CMakeLists.txt  lobby.cpp  lobby.h  main.cpp  pico_sdk.h  pico_tracking.h  pvr_stubs.h
client/pico_pvr/app/src/main/cpp/streaming/: pvr_blit.cpp  pvr_blit.h  pvr_tracking.cpp  pvr_tracking.h  streaming_client.cpp  streaming_client.h
client/wivrn-pvr/app/src/main/cpp/: CMakeLists.txt  alvr_ext.h  app_state.cpp  app_state.h  controller_model.cpp  controller_model.h  device_info.cpp  device_info.h  eq_panel.cpp  eq_panel.h  eye_tracking.cpp  eye_tracking.h  foveation.cpp  foveation.h  gl_util.h  input.cpp  input.h  jni.cpp  lobby.cpp  lobby.h  lobby_panels.cpp  lobby_panels.h  log.h  math3d.h  menu_model.cpp  menu_model.h  passthrough.cpp  passthrough.h  pico_sdk.h  render_thread.cpp  render_thread.h  settings_panel.cpp  settings_panel.h  stream_swap.h  ui_kit.cpp  ui_kit.h
client/wivrn-pvr/app/src/main/cpp/streaming/: alvr_stubs.cpp  pvr_eye_bridge.cpp  streaming_client.cpp  streaming_client.h  wivrn_stream_adapter.cpp  wivrn_stream_adapter.h
client/wivrn-pvr/app/src/main/cpp/wivrn/common/: wivrn_serialization_types.h  wivrn_sockets.cpp  wivrn_sockets.h
client/wivrn-pvr/app/src/main/cpp/wivrn/core/: pico_sched.h
client/wivrn-pvr/app/src/main/cpp/wivrn/net/: wivrn_client_pico.cpp
client/wivrn-pvr/app/src/main/cpp/wivrn/render/: pico_blit.cpp
client/wivrn-pvr/app/src/main/cpp/wivrn/tracking/: pico_tracking.cpp  pico_tracking.h
client/wivrn_pvr/app/src/main/cpp/: CMakeLists.txt  globals.cpp  main.cpp  native_entry.cpp
client/wivrn_pvr/app/src/main/cpp/core/: pico_jni.cpp  pico_render_thread.cpp
client/wivrn_pvr/app/src/main/cpp/streaming/: eye_tracking.cpp  oxr_blit.cpp
common/: wivrn_sockets.cpp
new-client/client/pico_native/: .gitignore  CMakeLists.txt  README.md  build.gradle  neo2_audio.cpp  neo2_audio.h  neo2_blit.cpp  neo2_blit.h  neo2_client.cpp  neo2_client.h  neo2_jni.cpp  neo2_sdk_bindings.h  neo2_session.cpp  neo2_session.h  neo2_video_decoder.cpp  neo2_video_decoder.h
new-client/client/pico_native/common/: crypto.h  wivrn_sockets.cpp
new-client/client/pico_native/resources/values/: strings.xml
openxr_poc/: settings.gradle
openxr_poc/app/src/main/cpp/: CMakeLists.txt  main.cpp
openxr_poc/app/src/main/cpp/openxr/: openxr_platform_defines.h  openxr_reflection.h
scripts/: build-apk.sh
src/: .gitignore  CHANGELOG.md  LICENSE  gradle.properties  keystore.properties.template  settings.gradle  version.properties
src/app/src/main/cpp/: CMakeLists.txt  alvr_client_core.h  app_state.cpp  app_state.h  cjk_text.cpp  cjk_text.h  device_info.cpp  eq_panel.cpp  font_atlas.cpp  font_atlas.h  grid_point_coord.txt  i18n.cpp  i18n.h  imgui_compositor.cpp  imgui_lobby.cpp  imgui_lobby.h  imgui_manager.cpp  imgui_manager.h  imgui_ui.cpp  jni.cpp  lobby.cpp  lobby.h  lobby_map.cpp  lobby_map.h  lobby_panels.cpp  lobby_panels.h  menu_model.cpp  menu_model.h  panorama.cpp  panorama.h  passthrough.cpp  passthrough.h  pico_sdk.h  pin_pad.cpp  render_thread.cpp  server_list.cpp  server_list.h  settings_panel.cpp  settings_panel.h  simple_lobby.cpp  (+5 more)
src/app/src/main/cpp/core/: app_state.cpp  app_state.h  device_info.cpp  device_info.h  jni.cpp  pico_sdk.h
src/app/src/main/cpp/input/: input.h
src/app/src/main/cpp/render/: gl_util.cpp  gl_util.h  lobby.cpp  lobby.h  render_thread.cpp  render_thread.h
src/app/src/main/cpp/streaming/: pvr_eye_bridge.cpp  pvr_renderer.cpp  pvr_renderer.h  streaming_client.cpp  streaming_client.h  wivrn_stream_adapter.h
src/app/src/main/cpp/ui/: android_ui.cpp  android_ui.h  eq_panel.cpp  eq_panel.h  imgui_compositor.cpp  imgui_compositor.h  imgui_manager.cpp  imgui_manager.h  imgui_ui.cpp  imgui_ui.h  panel_geometry.h  pin_pad.h  server_list.cpp  server_list.h  settings_panel.cpp  settings_panel.h  simple_lobby.cpp  simple_lobby.h  ui_kit.h
src/app/src/main/cpp/wivrn/audio/: pico_audio.cpp  pico_audio.h
src/app/src/main/cpp/wivrn/common/: openxr_body_compat.h
src/app/src/main/cpp/wivrn/core/: pico_sdk.h  pico_stutter.h
src/app/src/main/cpp/wivrn/net/: wivrn_client_pico.h
src/app/src/main/cpp/wivrn/render/: pico_blit.h
src/app/src/main/cpp/wivrn/tracking/: pico_tracking.cpp  pico_tracking.h
src/app/src/main/cpp/wivrn/video/: pico_decoder.cpp  pico_decoder.h
tools/: fetch_pico_sdk.sh  pico_sdk_hashes.txt
(+59 files in other folders)
